# decorous

./: Cargo.toml  README.md  bacon.toml  justfile  test.decor
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  template.html  template_css.html
crates/core/: Cargo.toml
crates/core/src/: cache.rs  cli.rs  compile_wasm.rs  config.rs  fmt_report.rs  indicators.rs  main.rs  preprocessor.rs  template_css.html  utils.rs
crates/core/src/compilers/: emscripten  emscripten.py  go.py  rust  rust.py  tinygo.py  wat.py  zig.py
crates/core/src/templates/: template.html
crates/decorous-backend/: Cargo.toml
crates/decorous-backend/src/: codegen_utils.rs  css_render.rs  index.html  index.js  lib.rs  render_error.rs  render_out.rs  renderer.rs  replace.rs  template.js  use_resolver.rs  wasm_compiler.rs
crates/decorous-backend/src/dom_render/: mod.rs  render_fragment.rs  renderer.rs  replace.rs
crates/decorous-backend/src/dom_render/snapshots/: decorous_backend__dom_render__tests__basic_elements_and_html_are_collapsed.snap  decorous_backend__dom_render__tests__basic_render_works.snap  decorous_backend__dom_render__tests__can_have_resolver_for_use_path.snap  decorous_backend__dom_render__tests__can_render_bindings.snap  decorous_backend__dom_render__tests__can_render_else_blocks.snap  decorous_backend__dom_render__tests__can_render_for_blocks.snap  decorous_backend__dom_render__tests__can_render_modularize.snap  decorous_backend__dom_render__tests__can_render_reactive_blocks.snap  decorous_backend__dom_render__tests__can_write_basic_text_nodes.snap  decorous_backend__dom_render__tests__can_write_mustache_tags.snap  decorous_backend__dom_render__tests__closures_with_scoped_var_as_part_of_body_take_the_scoped_var_as_argument.snap  decorous_backend__dom_render__tests__dashes_in_use_block_are_turned_into_underscores.snap  decorous_backend__dom_render__tests__dirty_items_are_in_conditional.snap  (+8 more)
crates/decorous-backend/src/prerender/: html_render.rs  mod.rs  render_ast.rs  render_if.rs  renderer.rs  template.js
crates/decorous-backend/src/snapshots/: decorous_backend__css_render__tests__mustaches_are_properly_turned_into_var_usages.snap  decorous_backend__tests__basic_render_works.snap  decorous_backend__tests__everything_in_script_tag_is_in_context_init.snap  decorous_backend__tests__imports_are_hoisted_out_of_context_init.snap  decorous_backend__tests__render_with_attrs_works.snap  decorous_backend__tests__render_with_event_listeners_works.snap
crates/decorous-frontend/: Cargo.toml
crates/decorous-frontend/benches/: parse.rs
crates/decorous-frontend/benches/inputs/: basic_no_js.decor  basic_with_js.decor
crates/decorous-frontend/src/: ast.rs  lexer.rs  lib.rs  location.rs  parser.rs  utils.rs
crates/decorous-frontend/src/component/: declared_vars.rs  dep_graph.rs  fragment.rs  globals.rs  mod.rs  warning.rs
crates/decorous-frontend/src/css/: ast.rs  error.rs  parser.rs
crates/decorous-frontend/src/nom_parser/: errors.rs  mod.rs
crates/decorous-frontend/src/parser/: code_blocks.rs  ctx.rs  errors.rs  lexer.rs  mod.rs  parser2.rs  preprocessor.rs
crates/decorous-frontend/src/snapshots/: decorous_frontend__nom_parser__tests__can_parse_attribute-2.snap  decorous_frontend__nom_parser__tests__can_parse_attribute-3.snap  decorous_frontend__nom_parser__tests__can_parse_attribute-4.snap  decorous_frontend__nom_parser__tests__can_parse_attribute.snap  decorous_frontend__nom_parser__tests__can_parse_elements-3.snap  decorous_frontend__nom_parser__tests__can_parse_elements-4.snap  decorous_frontend__nom_parser__tests__can_parse_elements-5.snap  decorous_frontend__nom_parser__tests__can_parse_elements-6.snap  decorous_frontend__nom_parser__tests__can_parse_elements-7.snap  decorous_frontend__nom_parser__tests__can_parse_elements-8.snap  decorous_frontend__parser__tests__can_parse_attrs_with_mustache_values-2.snap  decorous_frontend__parser__tests__can_parse_attrs_with_mustache_values.snap  decorous_frontend__parser__tests__can_parse_basic_element.snap  decorous_frontend__parser__tests__can_parse_basic_elements-2.snap  decorous_frontend__parser__tests__can_parse_basic_elements-3.snap  decorous_frontend__parser__tests__can_parse_basic_elements.snap  decorous_frontend__parser__tests__can_parse_bindings.snap  decorous_frontend__parser__tests__can_parse_comments-2.snap  decorous_frontend__parser__tests__can_parse_comments-3.snap  decorous_frontend__parser__tests__can_parse_comments.snap  decorous_frontend__parser__tests__can_parse_css-2.snap  decorous_frontend__parser__tests__can_parse_css-3.snap  decorous_frontend__parser__tests__can_parse_css.snap  decorous_frontend__parser__tests__can_parse_for_block-2.snap  decorous_frontend__parser__tests__can_parse_for_block-3.snap  decorous_frontend__parser__tests__can_parse_for_block-4.snap  decorous_frontend__parser__tests__can_parse_for_block.snap  decorous_frontend__parser__tests__can_parse_if_block.snap  decorous_frontend__parser__tests__can_parse_mustache_in_event_handle_attr-2.snap  decorous_frontend__parser__tests__can_parse_mustache_in_event_handle_attr.snap  decorous_frontend__parser__tests__can_parse_mustache_tags-2.snap  decorous_frontend__parser__tests__can_parse_mustache_tags-3.snap  decorous_frontend__parser__tests__can_parse_mustache_tags.snap  decorous_frontend__parser__tests__can_parse_script-2.snap  decorous_frontend__parser__tests__can_parse_script.snap  decorous_frontend__parser__tests__can_parse_self_closing_tag-2.snap  decorous_frontend__parser__tests__can_parse_self_closing_tag.snap  decorous_frontend__parser__tests__can_parse_text_node-2.snap  decorous_frontend__parser__tests__can_parse_text_node-3.snap  decorous_frontend__parser__tests__can_parse_text_node-4.snap  (+23 more)
(+247 files in other folders)
