[package]
name = "decorous"
version = "0.1.0"
authors = ["Diego Frias <styx5242@gmail.com>"]
license = "MIT"
exclude = [
  "/.github/",
  "/scripts/",
]
edition = "2021"
rust-version = "1.71"

[[test]]
name = "integration"
path = "tests/tests.rs"

[dev-dependencies]
assert_cmd = "2.0"
insta = { workspace = true }
tempdir = "0.3"
itertools = { workspace = true }

[workspace]
members = [
    "crates/decorous-frontend",
    "crates/decorous-backend",
    "crates/core",
    "crates/superfmt",
    "crates/harpoon",
]
default-members = ["crates/core"]

[workspace.dependencies]
rslint_parser = "0.3.1"
insta = { version = "1.30", features = ["yaml", "redactions"] }
itertools = "0.11"
thiserror = "1.0.40"

[profile.release]
debug = 1
