[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "decorous"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
decorous-frontend = { path = "../decorous-frontend" }
decorous-backend = { path = "../decorous-backend" }
superfmt = { path = "../superfmt" }
anyhow = "1.0.71"
