[package]
name = "decorous-core"
version = "0.1.0"
edition = "2021"

[features]
dhat-heap = ["dhat"]

[[bin]]
name = "decorous"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
decorous-frontend = { path = "../decorous-frontend" }
decorous-backend = { path = "../decorous-backend" }
decorous-errors = { path = "../decorous-errors" }
superfmt = { path = "../superfmt" }
anyhow = "1.0.71"
dhat = { version = "0.3", optional = true }
serde = { version = "1.0.177", features = ["derive"] }
handlebars = "4.3"
serde_json = "1.0.104"
scopeguard = "1.2.0"
shlex = "1.1.0"
which = "4.4.0"
itertools = { workspace = true }
duct = "0.13.6"
merge = { version = "0.1", default-features = false }
toml = "0.7.6"
indicatif = "0.17"
wasm-opt = "0.114.1"
walrus = "0.20"
notify = "6.0.1"
