[package]
name = "decorous-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rslint_parser = { workspace = true }
decorous-frontend = { path = "../decorous-frontend" }
superfmt = { path = "../superfmt" }
rslint_text_edit = "0.1.0"
itertools = "0.11.0"
lazy_format = "2.0.0"

[dev-dependencies]
insta = { workspace = true }
