[package]
name = "decorous-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rslint_parser = { workspace = true }
decorous-frontend = { path = "../decorous-frontend" }
decorous-errors = { path = "../decorous-errors" }
superfmt = { path = "../superfmt" }
rslint_text_edit = "0.1.0"
itertools = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
heck = "0.4.1"

[dev-dependencies]
insta = { workspace = true }
