[package]
name = "decorous-frontend"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "parse"
harness = false

[dependencies]
itertools = "0.11.0"
nom = "7.1.3"
nom_locate = "4.1.0"
rslint_errors = "0.2.0"
rslint_parser = { workspace = true }
thiserror = "1.0.40"
harpoon = { path = "../harpoon" }
rand = "0.8.5"
smallvec = "1.11.0"

[dev-dependencies]
insta = { workspace = true }
serde = { version = "1.0.131", features = ["derive"] }
serde_derive = { version = "1.0.131" }
criterion = "0.5"
