[package]
name = "decorous-frontend"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "parse"
harness = false

[dependencies]
itertools = "0.11.0"
rslint_errors = "0.2.0"
rslint_parser = { workspace = true }
thiserror = { workspace = true }
harpoon = { path = "../harpoon" }
smallvec = "1.11.0"
petgraph = "0.6.3"
decorous-errors = { path = "../decorous-errors" }
heck = "0.4.1"
bitflags = "2.4.0"
anyhow = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde = { version = "1.0.131", features = ["derive"] }
serde_derive = { version = "1.0.131" }
criterion = "0.5"
